@@ -12,6 +12,7 @@ Below is a complete listing of changes for each revision of FasterCSV.
 * Enhanced FasterCSV::Row.fields() to support Ranges, even for headers.
 * The slurping methods now return the new FasterCSV::Table objects.
 * Fixed parser so multibyte <tt>:col_sep</tt> works now.
+* Added a few examples for usage.
 
 == 0.2.1
 
